bk_ida/gccida/c0/record_dead_and_set_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/combine.c:11784:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                    ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/combine.c:11833:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)link->fld[0].rtwint)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/combine.c:11834:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)link->fld[0].rtwint)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_dead_and_set_regs/src/obj/combine.o] Error 1
